force-app/main/default/objects/Theatre_Day_Templates__c/Theatre_Day_Templates__c.object-meta.xml
<CustomObject>
    <label>Theatre Day Template</label>
    <nameField>
        <label>Theatre Day Templates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Theatre Day Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>