force-app/main/default/objects/Theatre_Day_Templates__c/fields/BMI_Limit__c.field-meta.xml
<CustomField>
    <fullName>BMI_Limit__c</fullName>
    <formula>Location__r.BMI_Limit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BMI Limit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>