force-app/main/default/objects/Theatre_Day_Templates__c/fields/Booked_Load__c.field-meta.xml
<CustomField>
    <fullName>Booked_Load__c</fullName>
    <label>Booked Load</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>