force-app/main/default/objects/Theatre_Day_Templates__c/fields/Drs_Available_for_this_Day__c.field-meta.xml
<CustomField>
    <fullName>Drs_Available_for_this_Day__c</fullName>
    <label>Drs Available for this Day</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dr Kristi Bateman</fullName>
            </value>
            <value>
                <fullName>Dr Nicole Sides</fullName>
            </value>
            <value>
                <fullName>Dr Sarah Broderick</fullName>
            </value>
            <value>
                <fullName>Dr Sim Hom Tam</fullName>
            </value>
            <value>
                <fullName>Dr Sonia Hossain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>