force-app/main/default/objects/Theatre_Day_Templates__c/fields/EPUs_Booked__c.field-meta.xml
<CustomField>
    <fullName>EPUs_Booked__c</fullName>
    <label>EPUs Booked</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>