force-app/main/default/objects/Theatre_Day_Templates__c/fields/High_BMI_Day__c.field-meta.xml
<CustomField>
    <fullName>High_BMI_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>High BMI Day</label>
    <type>Checkbox</type>
</CustomField>