force-app/main/default/objects/Theatre_Day_Templates__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Theatre Day Templates</relationshipLabel>
    <relationshipName>Theatre_Day_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>