force-app/main/default/objects/Theatre_Day_Templates__c/fields/Max_Theatre_Slots__c.field-meta.xml
<CustomField>
    <fullName>Max_Theatre_Slots__c</fullName>
    <label>Maximum Theatre Slots</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>