force-app/main/default/objects/Theatre_Day_Templates__c/fields/Maximum_Load__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Load__c</fullName>
    <label>Maximum Load</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>