force-app/main/default/objects/Theatre_Day_Templates__c/fields/PGT_Available_Day__c.field-meta.xml
<CustomField>
    <fullName>PGT_Available_Day__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PGT Available Day</label>
    <type>Checkbox</type>
</CustomField>