force-app/main/default/objects/Theatre_Day_Templates__c/fields/Space_Available__c.field-meta.xml
<CustomField>
    <fullName>Space_Available__c</fullName>
    <formula>IF(
    EPUs_Booked__c &gt;= Max_Theatre_Slots__c, 
    &quot;Day Full&quot;,
    IF(
        Booked_Load__c &lt; Maximum_Load__c,
        &quot;Under Booked&quot;,
        IF(
            Booked_Load__c &gt; Maximum_Load__c * 1.1,
            &quot;Overbooked&quot;,
            &quot;Day Full&quot;
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Space Available</label>
    <type>Text</type>
</CustomField>