force-app/main/default/objects/Theatre_Day_Templates__c/fields/Theatre_Date__c.field-meta.xml
<CustomField>
    <fullName>Theatre_Date__c</fullName>
    <label>Theatre Date</label>
    <type>Date</type>
</CustomField>