force-app/main/default/objects/Theatre_Day_Templates__c/fields/Week_number__c.field-meta.xml
<CustomField>
    <fullName>Week_number__c</fullName>
    <label>Week number</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>