force-app/main/default/objects/Theatre_Day_Templates__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Maximum_Load__c</columns>
    <columns>Booked_Load__c</columns>
    <columns>Week_number__c</columns>
    <columns>Space_Available__c</columns>
    <columns>Theatre_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>