force-app/main/default/objects/Theatre_Day_Templates__c/listViews/allSelection_Theatre_Day_Templates.listView-meta.xml
<ListView>
    <fullName>allSelection_Theatre_Day_Templates</fullName>
    <filterScope>Queue</filterScope>
    <label>allSelection</label>
    <queue>allSelection</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>